# tawaylon

./: .do_built  .gitignore  Cargo.toml  README.md  flake.nix  notes.md  requirements.txt  result  server-0.xkb
.do_built.dir/: redo-ifchange
lib/: .gitignore  libvosk.so.do  vosk-requirements.txt
models/: .gitignore  default.do  vosk-small.zip.do
tawaylon/: .gitignore  Cargo.toml  default.bin.do  run.do  server-0.xkb  vosk-example.do
tawaylon/src/: keymap.rs  lib.rs
tawaylon/src/recognizer/: mod.rs  vosk_models.rs
tawaylon/src/virtual_keyboard/: mod.rs
voskbuild/: .gitignore  vosk.do
wayland-protocols/: Cargo.toml
wlroots-extra-protocols/: Cargo.toml  README.md  update-protocols.sh
wlroots-extra-protocols/src/: lib.rs
