[package]
name = "tawaylon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rodio = "0.18.1"
smithay-client-toolkit = "0.19.1"
vosk = "0.2.0"
wayland-client = "0.31.3"
wayland-protocols = { version = "0.32.1", features = ["unstable", "client", "staging"] }

